fix(mon-pix): prevent skip-link visibility under a communication banner

--- a/mon-pix/app/styles/components/_skip-link.scss
+++ b/mon-pix/app/styles/components/_skip-link.scss
@@ -5,7 +5,7 @@
   padding: 0.5em;
   color: $pix-neutral-0;
   background-color: $pix-primary;
-  transform: translateY(calc(-100% - 8px));
+  transform: translateY(calc(-100% - 16px));
   transition: transform 0.3s;
 
   &:focus,
